--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.measuredsoftware.android.timer"
-      android:versionCode="7"
-      android:versionName="1.1.3"
-      android:installLocation="auto">
-    <application android:debuggable="false" android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".TimerActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:configChanges="keyboardHidden">
+    package="com.measuredsoftware.android.timer"
+    android:installLocation="auto"
+    android:versionCode="8"
+    android:versionName="1.2.0" >
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-sdk
+        android:minSdkVersion="13"
+        android:targetSdkVersion="17" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="false"
+        android:xlargeScreens="true" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar" >
+        <activity
+            android:name=".TimerActivity"
+            android:configChanges="keyboardHidden"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-                <action android:name="com.measuredsoftware.android.timer.ALARM"/>
+                <action android:name="com.measuredsoftware.android.timer.ALARM" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
-        <activity android:name=".TimerPrefs"
-                  android:label="@string/prefs"
-                  android:screenOrientation="portrait"
-                  android:configChanges="keyboardHidden">
+        <activity
+            android:name=".TimerPrefs"
+            android:configChanges="keyboardHidden"
+            android:label="@string/prefs"
+            android:screenOrientation="portrait" >
         </activity>
-        
-        <receiver android:name="AlarmReceiver">
-            <intent-filter>
-               <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT" />
-               <action android:name="alarm_killed" />
-            </intent-filter>
-        </receiver>        
 
-        <service android:name="AlarmBuzzer">
+        <receiver android:name="AlarmReceiver" >
+            <intent-filter>
+                <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT" />
+                <action android:name="alarm_killed" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="AlarmBuzzer" >
             <intent-filter>
                 <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT" />
             </intent-filter>
-        </service>        
+        </service>
     </application>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.VIBRATE"/>    
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    <uses-permission android:name="android.permission.DEVICE_POWER" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-sdk android:minSdkVersion="7" />
-	  <supports-screens android:largeScreens="true"
-	                    android:smallScreens="true" 
-	                    android:anyDensity="true"
-	                    android:normalScreens="true"/>     
-</manifest> 
+
+</manifest>
