--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-sdk
-        android:minSdkVersion="13"
+        android:minSdkVersion="10"
         android:targetSdkVersion="17" />
 
     <supports-screens
@@ -26,8 +26,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.NoActionBar">
+        android:label="@string/app_name">
         <activity
             android:name=".TimerActivity"
             android:configChanges="keyboardHidden"
