--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,66 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.measuredsoftware.android.timer"
-    android:installLocation="auto"
-    android:versionCode="9"
-    android:versionName="1.2.1" >
+          package="com.measuredsoftware.android.timer"
+          android:installLocation="auto"
+          android:versionCode="9"
+          android:versionName="1.2.1">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="17" />
+            android:minSdkVersion="14"
+            android:targetSdkVersion="17"/>
 
     <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="false"
-        android:xlargeScreens="false" />
+            android:anyDensity="true"
+            android:largeScreens="true"
+            android:normalScreens="true"
+            android:smallScreens="false"
+            android:xlargeScreens="false"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/icon"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.NoActionBar" >
-        <activity
-            android:name=".TimerActivity"
-            android:configChanges="keyboardHidden"
+            android:allowBackup="true"
+            android:icon="@drawable/icon"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:theme="@android:style/Theme.Holo.NoActionBar">
+        <activity
+                android:name=".TimerActivity"
+                android:configChanges="keyboardHidden"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTask">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="com.measuredsoftware.android.timer.ALARM" />
+                <action android:name="com.measuredsoftware.android.timer.ALARM"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".TimerPrefs"
-            android:configChanges="keyboardHidden"
-            android:label="@string/prefs"
-            android:screenOrientation="portrait" >
+                android:name=".TimerPrefs"
+                android:configChanges="keyboardHidden"
+                android:label="@string/prefs"
+                android:screenOrientation="portrait"
+                android:launchMode="singleTop">
         </activity>
 
         <receiver android:name="AlarmReceiver" android:exported="false">
             <intent-filter>
-                <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT" />
-                <action android:name="alarm_killed" />
+                <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT"/>
+                <action android:name="alarm_killed"/>
             </intent-filter>
         </receiver>
 
         <service android:name="AlarmBuzzer" android:exported="false">
             <intent-filter>
-                <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT" />
+                <action android:name="com.measuredsoftware.android.timer.ALARM_ALERT"/>
             </intent-filter>
         </service>
     </application>
