--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.measuredsoftware.android.timer"
           android:installLocation="auto"
-          android:versionCode="10"
-          android:versionName="1.2.2">
+          android:versionCode="11"
+          android:versionName="1.2.3">
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
